k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: task-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-postgres
  template:
    metadata:
      labels:
        app: task-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir: {} # התיקון שמונע את התקיעה בענן ללא צורך ב-PVC
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: task-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
